# RAM-Neural-Network

./: README.md
IA/: CMakeLists.txt  README.md
IA/include/: config.hpp  preprocess.hpp  recognize.hpp  train.hpp
IA/output/: leitura_arquivo
IA/src/: leitura_arquivo.cpp  main.cpp  preprocess.cpp  recognize.cpp  senha.cpp  train.cpp
